Fix overlap properly between Projects and Testimonials using z-index

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -703,7 +703,8 @@ img {
     position: relative;
     width: 100%;
     margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 0;
+    z-index: 10;
 }
 .projects-bg {
     position: relative;
